# ascii-art

./: .gitignore  AGENTS.md  README.md  ideas.md  opencode.json  pyproject.toml  tech-debts.md
.opencode/agents/: consultant.md  creative.md  debugger.md  feature-architect.md  innovator.md
src/cli_art/: animate.py  ascii.py  cli.py  clipboard.py  config.py  download.py  modes.py  themes.py
tests/: conftest.py  test_animate.py  test_cli.py  test_clipboard.py  test_config.py  test_download.py  test_modes.py  test_themes.py
